feat: 完成 SPU 更新和删除
